--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@google/genai": "^1.7.0",
     "@types/react": "^19.1.8",
+    "@types/uuid": "^10.0.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.3",
+    "uuid": "^11.1.0",
     "wav": "^1.0.2"
   },
   "devDependencies": {
